# gettracks

./: .gitignore  README.md  pyproject.toml  pytest.ini  test.txt
src/solver/: log.py  solver.py
tests/: test_solver.py
