[tool.poetry]
name = "18"
version = "0.1.0"
description = ""
authors = ["Matt Rixman <MatrixManAtYrService@users.noreply.github.com>"]
readme = "README.md"
packages = [
  { include = "solver", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
